RESOLVED FIXED21141
REGRESSION: Exception messages for user entered commands are poor
https://bugs.webkit.org/show_bug.cgi?id=21141
Summary REGRESSION: Exception messages for user entered commands are poor
Oliver Hunt
Reported 2008-09-26 05:27:02 PDT
Error messages in the console have very low fidelity, eg, typing the following in the terminal: proeprtyThatDoesn'tExist; results in the message "Error"
Attachments
Fix ye olde instanceof (2.10 KB, patch)
2008-09-28 00:46 PDT, Oliver Hunt
mjs: review+
Timothy Hatcher
Comment 1 2008-09-26 10:09:22 PDT
This is a regression in JavaScriptCore I think. Since the Inspector is getting false for: exceptionObj instanceof win.Error Where exceptionObj is a JSQuarantinedObjectWrapper around an Error object. When not using JSQuarantinedObjectWrappers this works.
Geoffrey Garen
Comment 2 2008-09-26 15:49:53 PDT
Probably a result of Maciej's recent instanceof optimization work. I don't think we properly honor objects that override hasInstance().
Geoffrey Garen
Comment 3 2008-09-26 15:50:30 PDT
I believe you could work around this regression by checking exceptionObj.constructor == win.Error, if you'd like.
Timothy Hatcher
Comment 4 2008-09-27 19:05:25 PDT
This also broke printing of Arrays, and other objects.
Oliver Hunt
Comment 5 2008-09-28 00:46:36 PDT
Created attachment 23890 [details] Fix ye olde instanceof
Maciej Stachowiak
Comment 6 2008-09-28 01:25:53 PDT
Comment on attachment 23890 [details] Fix ye olde instanceof r=me
Darin Adler
Comment 7 2008-10-12 18:23:20 PDT
Note You need to log in before you can comment on or make changes to this bug.