Bug 21141: REGRESSION: Exception messages for user entered commands are poor <https://bugs.webkit.org/show_bug.cgi?id=21141>

Reviewed by Maciej Stachowiak.

The bug repsonsible for this was the the JSInspectedObjectWrapper instances
were not initialising their StructureID's to indicate that the wrapper
overrides hasInstance, etc.  The solution is simply to use the createStructureID
helper on JSQuarantinedObjectWrapper to create a correct StructureID.


Canonical link: https://commits.webkit.org/29302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37034 268f45cc-cd09-0410-ab3c-d52691b4dbfc